--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-emoji==2.12.1
+customtkinter==5.2.2
+numpy==1.26.4
+Pillow==10.3.0
 Requests==2.32.3
+streamlit_analytics==0.4.1
 streamlit_lottie==0.0.5
-streamlit
